<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_navigationDrawer_item_listaDeSalas"
        android:title="@string/menu_navigationDrawer_listaDeSalas" />
    <item android:id="@+id/menu_navigationDrawer_item_paginaPrincipal"
        android:title="@string/menu_navigationDrawer_sala" />
        <!--item android:id="@+id/menu_navigationDrawer_item_salaPaginaPrincipal"
            android:title="@string/menu_navigationDrawer_salaPaginaPrincipal" />
        <item android:id="@+id/menu_navigationDrawer_item_salaJogadores"
            android:title="@string/menu_navigationDrawer_salaListaJogadores" />
        <item android:id="@+id/menu_navigationDrawer_item_salaFichasPersonagens"
            android:title="@string/menu_navigationDrawer_salaFichasPersonagens" />
        <item android:id="@+id/menu_navigationDrawer_item_paginaFichasMonstros"
            android:title="@string/menu_navigationDrawer_salaFichasMonstros" />
        <item android:id="@+id/menu_navigationDrawer_item_fichaPersonagem"
            android:title="@string/menu_navigationDrawer_ficha" /-->
    <item android:id="@+id/menu_navigationDrawer_item_sairDaConta"
        android:title="@string/menu_navigationDrawer_sairDaConta" />
</menu>