<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/dialogFragmentNewSheet_textView_pergunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/room_dialogFragment_pergunta"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialogFragmentNewSheet_button_sim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/gerais_sim"
        app:layout_constraintBottom_toBottomOf="@+id/dialogFragmentNewSheet_button_nao"
        app:layout_constraintEnd_toEndOf="@+id/dialogFragmentNewSheet_textView_pergunta"
        app:layout_constraintStart_toEndOf="@+id/dialogFragmentNewSheet_whiteSpace"
        app:layout_constraintTop_toTopOf="@+id/dialogFragmentNewSheet_button_nao" />

    <Button
        android:id="@+id/dialogFragmentNewSheet_button_nao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/gerais_nao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogFragmentNewSheet_whiteSpace"
        app:layout_constraintStart_toStartOf="@+id/dialogFragmentNewSheet_textView_pergunta"
        app:layout_constraintTop_toBottomOf="@+id/dialogFragmentNewSheet_textView_pergunta" />

    <TextView
        android:id="@+id/dialogFragmentNewSheet_whiteSpace"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="@+id/dialogFragmentNewSheet_button_nao"
        app:layout_constraintEnd_toEndOf="@+id/dialogFragmentNewSheet_textView_pergunta"
        app:layout_constraintStart_toStartOf="@+id/dialogFragmentNewSheet_textView_pergunta"
        app:layout_constraintTop_toTopOf="@+id/dialogFragmentNewSheet_button_nao" />

</android.support.constraint.ConstraintLayout>