<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="door.opposite.grupo2.dungeonscrolls.RoomNewSheetAutomaticallyActivity">

    <TextView
        android:id="@+id/roomNewSheetAutomatically_textView_tipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/room_newSheetAutomatically_activity_tipo"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/roomNewSheetAutomatically_textView_nd"
        app:layout_constraintEnd_toStartOf="@+id/roomNewSheetAutomatically_textView_nd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/roomNewSheetAutomatically_textView_nd"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/roomNewSheetAutomatically_editText_tipo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/roomNewSheetAutomatically_editText_nd"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_textView_tipo"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_textView_tipo"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_textView_tipo" />

    <TextView
        android:id="@+id/roomNewSheetAutomatically_textView_nd"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_newSheetAutomatically_activity_nivelDificuldade"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/roomNewSheetAutomatically_editText_nd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_textView_nd"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_textView_nd"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_textView_nd" />

    <TextView
        android:id="@+id/roomNewSheetAutomatically_textView_ambiente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/roomNewSheetAutomatically_textView_nivelAjuste"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_editText_tipo"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_editText_tipo"
        app:layout_constraintTop_toTopOf="@+id/roomNewSheetAutomatically_textView_nivelAjuste"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/roomNewSheetAutomatically_editText_ambiente"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/roomNewSheetAutomatically_editText_nivelAjuste"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_textView_tipo"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_textView_tipo"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_textView_ambiente" />

    <TextView
        android:id="@+id/roomNewSheetAutomatically_textView_nivelAjuste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_newSheetAutomatically_activity_nivelAjuste"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_editText_nd"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_editText_nd" />

    <EditText
        android:id="@+id/roomNewSheetAutomatically_editText_nivelAjuste"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_textView_nd"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_textView_nd"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_textView_nivelAjuste" />

    <TextView
        android:id="@+id/roomNewSheetAutomatically_textView_tamanho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/room_newSheetAutomatically_activity_tamanho"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_editText_nivelAjuste"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_editText_ambiente"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_editText_ambiente" />

    <EditText
        android:id="@+id/roomNewSheetAutomatically_editText_tamanho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_textView_tamanho"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_textView_tamanho"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_textView_tamanho" />

    <TextView
        android:id="@+id/roomNewSheetAutomatically_textView_alinhamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/room_newSheetAutomatically_activity_alinhamento"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_editText_nivelAjuste"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_editText_ambiente"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_editText_tamanho" />

    <EditText
        android:id="@+id/roomNewSheetAutomatically_editText_alinhamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/roomNewSheetAutomatically_textView_tamanho"
        app:layout_constraintStart_toStartOf="@+id/roomNewSheetAutomatically_textView_tamanho"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_textView_alinhamento" />

    <Button
        android:id="@+id/roomNewSheetAutomatically_button_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_newSheetAutomatically_activity_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/whiteSpace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_editText_alinhamento"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/roomNewSheetAutomatically_button_continuar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_newSheetAutomatically_activity_continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/whiteSpace"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_editText_alinhamento"
        app:layout_constraintVertical_bias="0.00999999" />

    <TextView
        android:id="@+id/whiteSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomNewSheetAutomatically_editText_alinhamento" />

</android.support.constraint.ConstraintLayout>
